[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/components/weapon/Weapon.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/weapon/gun/WeaponGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/weapon/audios/reloaded.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponGunUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -40, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponGunRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponGunDown:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponGunLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "take"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponGunUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, -0.5, 1 ),
"update": 0,
"values": [ Vector2( -40, -40 ), Vector2( 0, -32 ), Vector2( 0, -24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponGunRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -0.5, 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ), Vector2( 24, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponGunDown:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 32 ), Vector2( 0, 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponGunLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( -32, 0 ), Vector2( -24, 0 ) ]
}

[node name="Weapon" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 12 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponGunUp" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.431373, 0.729412, 0.298039, 1 )
position = Vector2( -40, -40 )
rotation = -1.5708
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponGunRight" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.0705882, 0.52549, 0.8, 1 )
position = Vector2( 32, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponGunDown" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.827451, 0.121569, 0.403922, 1 )
position = Vector2( 0, 32 )
rotation = 1.5708
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponGunLeft" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.839216, 0.745098, 0.12549, 1 )
position = Vector2( -32, 0 )
rotation = 3.14159
__meta__ = {
"_edit_lock_": true
}

[node name="Take" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/take = SubResource( 2 )

[node name="Reloaded" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="." to="." method="_on_Weapon_area_entered"]
[connection signal="animation_finished" from="Take" to="." method="_on_Take_animation_finished"]
